// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LanguageSelector - Snapshots > matches snapshot - closed 1`] = `
<div
  class="flex w-full flex-col items-start gap-4"
>
  <p
    class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
  >
    Display language
  </p>
  <div
    class="relative w-full"
  >
    <button
      class="flex h-8 w-full cursor-pointer items-center justify-between transition-opacity hover:opacity-80"
    >
      <span
        class="flex items-center gap-1"
      >
        <span
          class="w-4 text-[17px]"
        >
          🇺🇸
        </span>
        <span
          class="text-base leading-6 font-bold"
        >
          US English
        </span>
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down transition-transform duration-300"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`LanguageSelector - Snapshots > matches snapshot - open 1`] = `
<div
  class="flex w-full flex-col items-start gap-4"
>
  <p
    class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
  >
    Display language
  </p>
  <div
    class="relative w-full"
  >
    <button
      class="flex h-8 w-full cursor-pointer items-center justify-between transition-opacity hover:opacity-80"
    >
      <span
        class="flex items-center gap-1"
      >
        <span
          class="w-4 text-[17px]"
        >
          🇺🇸
        </span>
        <span
          class="text-base leading-6 font-bold"
        >
          US English
        </span>
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down transition-transform duration-300 rotate-180"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </button>
    <div
      class="absolute top-full right-0 left-0 z-50 mt-2 rounded-lg border border-border bg-popover shadow-lg animate-in py-2 duration-200 fade-in-0 zoom-in-95 max-h-[400px] overflow-y-auto"
    >
      <button
        class="flex w-full items-center gap-3 px-4 py-3 text-left transition-colors cursor-pointer hover:bg-accent bg-accent/50"
      >
        <span
          class="text-2xl"
        >
          🇺🇸
        </span>
        <span
          class="font-light"
        >
          US English
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-check ml-auto"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
      </button>
      <button
        class="flex w-full items-center gap-3 px-4 py-3 text-left transition-colors cursor-pointer hover:bg-accent"
      >
        <span
          class="text-2xl"
        >
          🇧🇷
        </span>
        <span
          class="font-light"
        >
          Português (Brasil)
        </span>
      </button>
      <button
        class="flex w-full items-center gap-3 px-4 py-3 text-left transition-colors cursor-pointer hover:bg-accent"
      >
        <span
          class="text-2xl"
        >
          🇪🇸
        </span>
        <span
          class="font-light"
        >
          Español
        </span>
      </button>
      <button
        class="flex w-full items-center gap-3 px-4 py-3 text-left transition-colors cursor-pointer hover:bg-accent"
      >
        <span
          class="text-2xl"
        >
          🇩🇪
        </span>
        <span
          class="font-light"
        >
          Deutsch
        </span>
      </button>
      <button
        class="flex w-full items-center gap-3 px-4 py-3 text-left transition-colors cursor-pointer hover:bg-accent"
      >
        <span
          class="text-2xl"
        >
          🇫🇷
        </span>
        <span
          class="font-light"
        >
          Français
        </span>
      </button>
      <button
        class="flex w-full items-center gap-3 px-4 py-3 text-left transition-colors cursor-pointer hover:bg-accent"
      >
        <span
          class="text-2xl"
        >
          🇮🇹
        </span>
        <span
          class="font-light"
        >
          Italiano
        </span>
      </button>
      <button
        class="flex w-full items-center gap-3 px-4 py-3 text-left transition-colors cursor-pointer hover:bg-accent"
      >
        <span
          class="text-2xl"
        >
          🇨🇳
        </span>
        <span
          class="font-light"
        >
          中文
        </span>
      </button>
      <button
        class="flex w-full items-center gap-3 px-4 py-3 text-left transition-colors cursor-pointer hover:bg-accent"
      >
        <span
          class="text-2xl"
        >
          🇯🇵
        </span>
        <span
          class="font-light"
        >
          日本語
        </span>
      </button>
      <button
        class="flex w-full items-center gap-3 px-4 py-3 text-left transition-colors cursor-pointer hover:bg-accent"
      >
        <span
          class="text-2xl"
        >
          🇸🇦
        </span>
        <span
          class="font-light"
        >
          العربية
        </span>
      </button>
    </div>
  </div>
</div>
`;
